--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run test",
     "dev": "webpack serve",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "analyze": "STATS=server webpack"
   },
   "author": "Lev Hnitsa",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "babel-loader": "^8.2.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -49,6 +51,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.9.2"
   }
 }
